[gd_scene load_steps=6 format=2]

[ext_resource path="res://hud/mat/Snowstorm.otf" type="DynamicFontData" id=1]
[ext_resource path="res://materiali/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://menu/select_players/PlayerLine.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/select_players/SelectPlayersMenu.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=17]
size = 40
font_data = ExtResource( 1 )

[node name="SelectPlayersMenu" type="Control"]
margin_left = -35.0
margin_top = -35.0
margin_right = 989.0
margin_bottom = 733.0
script = ExtResource( 10 )
__meta__ = {
"_edit_horizontal_guides_": [ 223.0, 382.0, 534.0, 268.0, 193.0, 600.0 ],
"_edit_vertical_guides_": [ 512.0, 262.0, 766.0 ]
}

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="undi" type="Panel" parent="Node2D"]
modulate = Color( 1, 1, 1, 0.901961 )
margin_right = 1024.0
margin_bottom = 768.0

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -165.0
margin_top = 64.0
margin_right = 165.0
margin_bottom = 97.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 17 )
text = "SELECT PLAYERS"
align = 1
uppercase = true

[node name="Table" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = 156.0
margin_right = 250.0
margin_bottom = 700.0
custom_constants/separation = 8

[node name="TableLine" type="HBoxContainer" parent="Table"]
margin_right = 500.0
margin_bottom = 20.0
rect_min_size = Vector2( 410, 0 )

[node name="Label" type="Label" parent="Table/TableLine"]
margin_right = 164.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "PLAYER"

[node name="Label2" type="Label" parent="Table/TableLine"]
margin_left = 168.0
margin_right = 332.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "CONTROLLER"
align = 1

[node name="Label3" type="Label" parent="Table/TableLine"]
margin_left = 336.0
margin_right = 500.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "STATUS"
align = 2

[node name="HSeparator" type="HSeparator" parent="Table"]
margin_top = 28.0
margin_right = 500.0
margin_bottom = 65.0
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_constants/separation = 24

[node name="ScrollContainer" type="ScrollContainer" parent="Table"]
margin_top = 73.0
margin_right = 500.0
margin_bottom = 453.0
rect_min_size = Vector2( 0, 380 )
size_flags_vertical = 0

[node name="PlayerList" type="VBoxContainer" parent="Table/ScrollContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 14

[node name="PlayerLine" parent="Table/ScrollContainer/PlayerList" instance=ExtResource( 4 )]
visible = false

[node name="HSeparator2" type="HSeparator" parent="Table"]
margin_top = 461.0
margin_right = 500.0
margin_bottom = 498.0
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_constants/separation = 24

[node name="BtnLine" type="HBoxContainer" parent="Table"]
margin_top = 522.0
margin_right = 500.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 10
alignment = 1

[node name="QuitBtn" type="Button" parent="Table/BtnLine" groups=["menu_btns"]]
margin_right = 166.0
margin_bottom = 22.0
focus_neighbour_right = NodePath("../ConfirmBtn")
focus_next = NodePath("../ConfirmBtn")
size_flags_horizontal = 2
size_flags_vertical = 8
theme = ExtResource( 3 )
text = "< TO MAIN MENU"
align = 0

[node name="ConfirmBtn" type="Button" parent="Table/BtnLine" groups=["menu_btns"]]
margin_left = 348.0
margin_right = 500.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../QuitBtn")
focus_previous = NodePath("../QuitBtn")
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource( 3 )
text = "PLAY D GEJM >"
align = 2

[connection signal="pressed" from="Table/BtnLine/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Table/BtnLine/ConfirmBtn" to="." method="_on_ConfirmBtn_pressed"]
